@@ -1,51 +1,46 @@
 package dev.yawaflua.gominecraftbridge.backend.nativeffi;
 
+import com.sun.jna.Function;
+import com.sun.jna.Memory;
+import com.sun.jna.NativeLibrary;
+import com.sun.jna.Pointer;
+import com.sun.jna.ptr.LongByReference;
+import com.sun.jna.ptr.PointerByReference;
 import dev.yawaflua.gominecraftbridge.backend.PluginBackend;
 import dev.yawaflua.gominecraftbridge.backend.PluginInvocationException;
 import dev.yawaflua.gominecraftbridge.protocol.Protocol;
 
-import java.lang.foreign.Arena;
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.Linker;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SymbolLookup;
-import java.lang.foreign.ValueLayout;
-import java.lang.invoke.MethodHandle;
 import java.nio.file.Path;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
+/**
+ * Java 21+ native backend implemented through JNA.
+ *
+ * <p>Minecraft 1.21.1 runs on Java 21, where the Foreign Function & Memory API
+ * is still preview-only. JNA keeps the same backend usable on both Java 21 and
+ * Java 25 without preview flags. Libraries are deliberately never disposed:
+ * unloading a live Go runtime is unsafe.</p>
+ */
 public final class NativePluginBackend implements PluginBackend {
-	private static final FunctionDescriptor ABI_VERSION_DESCRIPTOR = FunctionDescriptor.of(ValueLayout.JAVA_INT);
-	private static final FunctionDescriptor CALL_DESCRIPTOR = FunctionDescriptor.of(
-			ValueLayout.JAVA_INT,
-			ValueLayout.JAVA_INT,
-			ValueLayout.ADDRESS,
-			ValueLayout.JAVA_LONG,
-			ValueLayout.ADDRESS,
-			ValueLayout.ADDRESS
-	);
-	private static final FunctionDescriptor FREE_DESCRIPTOR = FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);
+	private static final Map<Path, Object> LIBRARY_LOCKS = new ConcurrentHashMap<>();
 
 	private final Path origin;
-	private final MethodHandle abiVersionHandle;
-	private final MethodHandle callHandle;
-	private final MethodHandle freeHandle;
+	private final Object libraryLock;
+	private final NativeLibrary library;
+	private final Function abiVersionFunction;
+	private final Function callFunction;
+	private final Function freeFunction;
 
-	public NativePluginBackend(Path library) {
-		this.origin = library.toAbsolutePath().normalize();
+	public NativePluginBackend(Path libraryPath) {
+		this.origin = libraryPath.toAbsolutePath().normalize();
+		this.libraryLock = LIBRARY_LOCKS.computeIfAbsent(this.origin, ignored -> new Object());
 
 		try {
-			Linker linker = Linker.nativeLinker();
-			// Native Go runtimes are not safely unloadable. The global arena deliberately keeps
-			// the library resident until JVM shutdown; deinit is a logical lifecycle operation.
-			SymbolLookup symbols = SymbolLookup.libraryLookup(this.origin, Arena.global());
-			this.abiVersionHandle = linker.downcallHandle(required(symbols, "gmb_abi_version"), ABI_VERSION_DESCRIPTOR);
-			this.callHandle = linker.downcallHandle(required(symbols, "gmb_call"), CALL_DESCRIPTOR);
-			this.freeHandle = linker.downcallHandle(required(symbols, "gmb_free"), FREE_DESCRIPTOR);
-		} catch (IllegalCallerException exception) {
-			throw new PluginInvocationException(
-					"Native access is disabled. Start Minecraft with --enable-native-access=ALL-UNNAMED",
-					exception
-			);
+			this.library = NativeLibrary.getInstance(this.origin.toString());
+			this.abiVersionFunction = required("gmb_abi_version");
+			this.callFunction = required("gmb_call");
+			this.freeFunction = required("gmb_free");
 		} catch (RuntimeException exception) {
 			throw new PluginInvocationException("Cannot load native plugin " + this.origin, exception);
 		}
@@ -53,64 +48,66 @@ public final class NativePluginBackend implements PluginBackend {
 
 	@Override
 	public int abiVersion() {
-		try {
-			return (int) this.abiVersionHandle.invokeExact();
-		} catch (Throwable throwable) {
-			throw new PluginInvocationException("Cannot read ABI version from " + this.origin, throwable);
+		synchronized (this.libraryLock) {
+			try {
+				return this.abiVersionFunction.invokeInt(new Object[0]);
+			} catch (RuntimeException exception) {
+				throw new PluginInvocationException("Cannot read ABI version from " + this.origin, exception);
+			}
 		}
 	}
 
 	@Override
-	public synchronized byte[] call(Protocol.Operation operation, byte[] input) {
-		MemorySegment output = MemorySegment.NULL;
+	public byte[] call(Protocol.Operation operation, byte[] input) {
+		synchronized (this.libraryLock) {
+			Memory inputMemory = null;
+			Pointer output = Pointer.NULL;
 
-		try (Arena arena = Arena.ofConfined()) {
-			MemorySegment inputMemory = MemorySegment.NULL;
+			try {
+				if (input.length > 0) {
+					inputMemory = new Memory(input.length);
+					inputMemory.write(0, input, 0, input.length);
+				}
 
-			if (input.length > 0) {
-				inputMemory = arena.allocate(input.length);
-				inputMemory.copyFrom(MemorySegment.ofArray(input));
-			}
+				PointerByReference outputPointer = new PointerByReference(Pointer.NULL);
+				LongByReference outputLength = new LongByReference(0L);
+				int status = this.callFunction.invokeInt(new Object[]{
+						operation.code(),
+						inputMemory == null ? Pointer.NULL : inputMemory,
+						(long) input.length,
+						outputPointer,
+						outputLength
+				});
 
-			MemorySegment outputPointer = arena.allocate(ValueLayout.ADDRESS);
-			MemorySegment outputLength = arena.allocate(ValueLayout.JAVA_LONG);
-			outputPointer.set(ValueLayout.ADDRESS, 0, MemorySegment.NULL);
-			outputLength.set(ValueLayout.JAVA_LONG, 0, 0L);
-			int status = (int) this.callHandle.invokeExact(
-					operation.code(),
-					inputMemory,
-					(long) input.length,
-					outputPointer,
-					outputLength
-			);
+				output = outputPointer.getValue();
+				long length = outputLength.getValue();
+				if (status != 0) {
+					throw new PluginInvocationException("Native entrypoint returned status " + status);
+				}
+				if (length < 0 || length > Protocol.MAX_RESPONSE_BYTES) {
+					throw new PluginInvocationException("Native response has invalid length " + length);
+				}
+				if (length == 0) {
+					return new byte[0];
+				}
+				if (output == null) {
+					throw new PluginInvocationException(
+							"Native response pointer is null for " + length + " bytes"
+					);
+				}
 
-			output = outputPointer.get(ValueLayout.ADDRESS, 0);
-			long length = outputLength.get(ValueLayout.JAVA_LONG, 0);
-
-			if (status != 0) {
-				throw new PluginInvocationException("Native entrypoint returned status " + status);
-			}
-			if (length < 0 || length > Protocol.MAX_RESPONSE_BYTES) {
-				throw new PluginInvocationException("Native response has invalid length " + length);
-			}
-			if (length == 0) {
-				return new byte[0];
-			}
-			if (output.equals(MemorySegment.NULL)) {
-				throw new PluginInvocationException("Native response pointer is null for " + length + " bytes");
-			}
-
-			return output.reinterpret(length).toArray(ValueLayout.JAVA_BYTE);
-		} catch (PluginInvocationException exception) {
-			throw exception;
-		} catch (Throwable throwable) {
-			throw new PluginInvocationException("Native call failed for " + this.origin, throwable);
-		} finally {
-			if (!output.equals(MemorySegment.NULL)) {
-				try {
-					this.freeHandle.invokeExact(output);
-				} catch (Throwable throwable) {
-					throw new PluginInvocationException("Cannot free native response from " + this.origin, throwable);
+				return output.getByteArray(0, Math.toIntExact(length));
+			} catch (PluginInvocationException exception) {
+				throw exception;
+			} catch (RuntimeException exception) {
+				throw new PluginInvocationException("Native call failed for " + this.origin, exception);
+			} finally {
+				if (output != null) {
+					try {
+						this.freeFunction.invokeVoid(new Object[]{output});
+					} catch (RuntimeException exception) {
+						throw new PluginInvocationException("Cannot free native response from " + this.origin, exception);
+					}
 				}
 			}
 		}
@@ -121,7 +118,11 @@ public final class NativePluginBackend implements PluginBackend {
 		return this.origin;
 	}
 
-	private static MemorySegment required(SymbolLookup symbols, String name) {
-		return symbols.find(name).orElseThrow(() -> new PluginInvocationException("Missing native symbol " + name));
+	private Function required(String name) {
+		try {
+			return this.library.getFunction(name);
+		} catch (UnsatisfiedLinkError exception) {
+			throw new PluginInvocationException("Missing native symbol " + name, exception);
+		}
 	}
 }
